Free Code Camp - Tribute Website

--- a/Free Code Camp/Tribute Website/index.html
+++ b/Free Code Camp/Tribute Website/index.html
@@ -22,14 +22,14 @@
   <img src="http://pre06.deviantart.net/f0f0/th/pre/i/2013/078/7/2/_wip__hayao_miyazaki_by_cupkake_queen-d5yk08f.jpg" class="header-image"></img>
 <p class="b">"When ever someone creates something with all their heart, then that creation is given a soul" - The Cat Returns 2002</p>
   
-<p><br>Hayao Miyazaki is one of Japan's greatest animation directors. The entertaining plots, compelling characters, and breathtaking animation in his films have earned him international renown from critics as well as public recognition within Japan. The Walt Disney Company's commitment to introduce the films to the rest of the world will let more people appreciate the high-quality works he has given the movie-going public.</p>
-<p>Hayao Miyazaki was born in Tôkyô on January 5, 1941. He started his career in 1963 as an animator at the studio Toei Douga studio, and was subsequently involved in many early classics of Japanese animation. From the beginning, he commanded attention with his incredible drawing ability and the seemingly endless stream of movie ideas he proposed.</p>
-<p>Over his long career Hayao Miyazaki has directed a long series of movies that have cumulatively been nominated for well over 100 awards. Over his long career Hayao Miyazaki has directed a long series of movies that have cumulatively been nominated for over. Some of his most renown awards were won by the follow masterpieces.  </p>
+<p class="c"><br>Hayao Miyazaki is one of Japan's greatest animation directors. The entertaining plots, compelling characters, and breathtaking animation in his films have earned him international renown from critics as well as public recognition within Japan. The Walt Disney Company's commitment to introduce the films to the rest of the world will let more people appreciate the high-quality works he has given the movie-going public.</p>
+<p class="c">Hayao Miyazaki was born in Tôkyô on January 5, 1941. He started his career in 1963 as an animator at the studio Toei Douga studio, and was subsequently involved in many early classics of Japanese animation. From the beginning, he commanded attention with his incredible drawing ability and the seemingly endless stream of movie ideas he proposed. He had come to direct many successful films eventually leading him to co-found the iconic and revolutionary Studio Ghibli, responsible for releasing many features that made waves in Japan warranting releases all over the world. </p>
+<p class="c">Over his long career Hayao Miyazaki has directed a long series of movies that have cumulatively been nominated for well over 100 awards. Over his long career Hayao Miyazaki has directed a long series of movies that have cumulatively been nominated for over. Some of his most renown awards were won by the follow masterpieces.  </p>
 
 <div class="row"><img src="http://vignette3.wikia.nocookie.net/studio-ghibli/images/4/4a/Spirited_Away_(Amerikansk_DVD).jpg/revision/latest?cb=20140116135457" class="movieOne" align="left"></img>
 
 <div class="awardsOne">
-    <p text-align="center">10-year-old Chihiro and her parents stumble upon a seemingly abandoned amusement park. After her mother and father are turned into giant pigs, Chihiro meets the mysterious Haku, who explains that the park is a resort for supernatural beings who need a break from their time spent in the earthly realm, and that she must work there to free herself and her parents.</p>
+    <p class="c" text-align="center">10-year-old Chihiro and her parents stumble upon a seemingly abandoned amusement park. After her mother and father are turned into giant pigs, Chihiro meets the mysterious Haku, who explains that the park is a resort for supernatural beings who need a break from their time spent in the earthly realm, and that she must work there to free herself and her parents.</p>
 <ul>
   <li>Tokoyo Anime Award -  Best Director & Grand Prix</li>
   <li>Japanese Academy Award - Best Film</li>
@@ -42,13 +42,13 @@
 
 <div class ="row"><img src="http://cdn23.us1.fansshare.com/photos/princessmononoke/princess-mononoke-dvd-996792792.jpg" class="movieTwo" align="right"></img>
 <div class="awardsTwo">
-  <p>Ashitaka is infected with an incurable disease by a possessed boar/god. He is to die unless he can find a cure to rid the curse from his body. It seems that his only hope is to travel to the far east. When he arrives to get help from the deer god, he finds himself in the middle of a battle between the animal inhabitants of the forest and an iron mining town that is exploiting and killing the forest. Leading the forest animals in the battle is a human raised by wolves, Princess Mononoke.</p>
+  <p class="c">Ashitaka is infected with an incurable disease by a possessed boar/god. He is to die unless he can find a cure to rid the curse from his body. It seems that his only hope is to travel to the far east. When he arrives to get help from the deer god, he finds himself in the middle of a battle between the animal inhabitants of the forest and an iron mining town that is exploiting and killing the forest. Leading the forest animals in the battle is a human raised by wolves, Princess Mononoke.</p>
 <ul dir="rtl">
-  <li>Tokoyo Anime Award -</li>
-  <li>Japanese Academy Award</li>
-  <li>Hong Kong Film Award</li>
-  <li>Academy Award</li>
-  <li>Saturn Award</li>
+  <li>Japan Media Arts Festival - Grand Prize</li>
+  <li>Osaka Film Festival - Special Award</li>
+  <li>Japanese Academy Awards - Picture of The Year</li>
+  <li>Takasaki Film Festival - Best Director</li>
+  <li>The Association of Movie Viewing Groups - Best Japanese Movie</li>
   </div>
 </ul>
 </div>
@@ -56,21 +56,27 @@
 <div class="row">
 <img src="https://lucien0maverick.files.wordpress.com/2015/03/the-wind-rises.jpg" class="movieThree" align="left"></img>
 <div class="awardsThree">
-  <p>In "The Wind Rises," Jiro dreams of flying and designing beautiful airplanes, inspired by the famous Italian aeronautical designer Caproni. Nearsighted from a young age and unable to be a pilot, Jiro joins a major Japanese engineering company in 1927 and becomes one of the world's most innovative and accomplished airplane designers. </p>
+  <p class="c">In "The Wind Rises," Jiro dreams of flying and designing beautiful airplanes, inspired by the famous Italian aeronautical designer Caproni. Nearsighted from a young age and unable to be a pilot, Jiro joins a major Japanese engineering company in 1927 and becomes one of the world's most innovative and accomplished airplane designers. </p>
 <ul>
-  <li>Tokoyo Anime Award -</li>
-  <li>Japanese Academy Award</li>
-  <li>Hong Kong Film Award</li>
-  <li>Academy Award</li>
-  <li>Saturn Award</li>
+  <li>Chicago Film Critics Association - Best Animated Feature</li>
+  <li>New York Film Critics Online - Best Animated Feature</li>
+  <li>Satellite Awards - Best Motion Picture, Animated or Mixed Media</li>
+  <li>Online Film Critics Society - Best Animated Feature</li>
+  <li>St.Louis Gateway Film Critics Association - Top 3 Best Animated Feature</li>
   </div>
 </ul>
 
 </div>
 
-<p><br>Though each movie was a recipient of more awards than posted on this website.</p>
-<p>Dark siphon, aroma, lungo whipped dark et dark. Carajillo white shop, grounds est beans decaffeinated single origin and dark. Spoon beans extra, irish rich, mazagran aftertaste half and half bar froth mocha froth. Medium acerbic pumpkin spice, saucer foam a acerbic frappuccino medium.</p>
-<p>Mug cream extra lungo qui kopi-luwak skinny. Breve doppio latte chicory crema est skinny. Caramelization barista qui, shop con panna, lungo spoon wings to go filter. Siphon chicory, roast doppio skinny cup americano foam.</p></div>
+<p class="c"><br>Though each movie was a recipient of more awards than posted on this website.</p>
+<p class="c">Miyazaki stated several times over the years that he wanted to retire, but on September 7, 2013, stated that he was "quite serious" this time. Having turned 72 the previous January, he felt that after 50 years, he'd been in the industry long enough and it was time to hand the reins over to younger staff. He also added that "At my age, I can't work long hours like I used to." However, he plans on pursuing new goals, such as working on the Studio Ghibli Museum, on which he commented "I might even become an exhibit myself". Studio Ghibli producer Toshio Suzuki revealed that Miyazaki will continue to illustrate manga and is currently working on a serialized samurai series. Fellow animator Isao Takahata has publicly stated that he believes Miyazaki's retirement to be non-permanent. "...I think there is a decent chance that may change. I think so, since I've known him a long time. Don't be at all surprised if that happens." During a New Year's Eve radio show, broadcast on Tokyo FM, on December 31, 2013, Toshio Suzuki speculated that Miyazaki might revoke his latest retirement (apparently his sixth to date). On November 13, 2016, Miyazaki confirmed that he would be coming from retirement to work on a new film.</p>
+<p class="c">If you would like to learn more about Hayao Miyazaki or studio ghibli(requires translation capability) please feel free to click on one of the links below.</p>
+
+<div>
+  <a href="https://en.wikipedia.org/wiki/Hayao_Miyazaki" target="_blank"><p class="links">Hayao Miyazaki</p></a>
+  <a href="http://www.ghibli.jp/" target="_blank"><p class="links">Studio Ghibli</p></a>
+</div>
+</div>
   
   
 </body>
