added half radial progress bar function

--- a/Chart.JS Assets/Dynamic Build Doughnut Charts/index.html
+++ b/Chart.JS Assets/Dynamic Build Doughnut Charts/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>A Pen by  Waun Broderick</title>
+  <title>Doughnut Charts</title>
   
   
   
@@ -21,6 +21,7 @@
 <canvas class="canvas1" id="PWD" width="200" height="200"></canvas>
 <canvas class="canvas2" id="Aboriginal" width="200" height="200"></canvas>
 <canvas class="canvas3" id="Women" width="200" height="200"></canvas>
+  <canvas class="canvas4" id="Test" width="200" height="200"></canvas>
 </div>
   
   
