Variables for passed projection init render, and html DOM manipulation logic

--- a/Projection Tool/index.html
+++ b/Projection Tool/index.html
@@ -20,10 +20,16 @@
 
 <html>
 <body>
-
+  
+<div id="container">
 <canvas id="myCanvas" width="800" height="400" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas>
 
+<div id="param1">param1</div>
+<div id="param2">param2</div>
+<div id="param3">param3</div>
+<div id="param4">param4</div>
+</div>
 
 </body>
 </html>
